Closed Bug 1334489 Opened 9 years ago Closed 9 years ago

nsMessengerWinIntegration.h compile error C2365: QUNS_NOT_PRESENT

Categories

(MailNews Core :: Build Config, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 54.0

People

(Reporter: frg, Assigned: frg)

References

Details

Attachments

(1 file, 2 obsolete files)

+++ This bug was initially created as a clone of Bug #1334464 +++ d:\seamonkey\comm-central\mailnews\base\src\nsMessengerWinIntegration.h(24): error C2365: 'QUNS_NOT_PRESENT': redefinition; previous definition was 'enumerator' C:\Program Files (x86)\Windows Kits\10\include\10.0.10586.0\um\shellapi.h(980): note: see declaration of 'QUNS_NOT_PRESENT' d:\seamonkey\comm-central\mailnews\base\src\nsMessengerWinIntegration.h(25): error C2365: 'QUNS_BUSY': redefinition; previous defini tion was 'enumerator'
Takes a little longer. I am crashing because of this one: https://hg.mozilla.org/mozilla-central/rev/5a6fc9e02f9d
That's another bug, or do you want to port two bugs here? Can we land your patch for the Windows integration? It compiled OK for me. Do we know which bug regressed this to note that in the commit message?
Depends on: 1325299
This patch removes the enums but doesn't call SHQueryUserNotificationState directly.
Could you check this one out. SeaMonkey 2.51 currently crashes during startup.
Attachment #8831179 - Flags: feedback?(jorgk)
Comment on attachment 8831171 [details] [diff] [review] 1334489-SHQueryUserNotificationState.patch This could go in. The other would be just icing on top.
Attachment #8831171 - Flags: review?(jorgk)
Well, I'd like to understand first why we're here. What's changed so QUNS_NOT_PRESENT and friend are now defined twice. Something is now including nsAlertsService.h when it didn't before?
I get it now: Bug 1325299. They've changed the WINVER and that triggers this #if (NTDDI_VERSION >= NTDDI_VISTA) typedef enum { QUNS_NOT_PRESENT = 1, in shellapi.h. OK, I'll do the review now.
I took the liberty to merge the two patches. Part 2 removed some of the stuff that part 1 had corrected, so I think it's best to rip it all out in one go ;-) Like my Spanish plumber always says: "Fuera!" (meaning: Out!).
Attachment #8831171 - Attachment is obsolete: true
Attachment #8831179 - Attachment is obsolete: true
Attachment #8831171 - Flags: review?(jorgk)
Attachment #8831179 - Flags: feedback?(jorgk)
Attachment #8831214 - Flags: review+
https://hg.mozilla.org/comm-central/rev/aa9ec692549119aac1abf473af2056adb97ad7cb Windows will now compile again. At least debug builds will crash on bug 1276669 with lovely stuff as can be seen in bug 1334558.
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 54.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: