Bug 1334489 - Port bug 1325299 to mailnews: SHQueryUserNotificationState is now defined in shellapi.h after increasing WINVER to 601. r=jorgk CLOSED TREE